@@ -1,5 +1,8 @@
 1998-12-10  Dieter Baron  <dillo@danbala.tuwien.ac.at>
 
+	* write_afm.c (write_afm), open_font.c (open_font), * t42.h: added
+	ascender and descender.
+
 	* write_t42.c (write_strdef): omit FontInfo entries if string is
 	NULL.
 
